--- a/src/styles/ui/HistoryPresentation.scss
+++ b/src/styles/ui/HistoryPresentation.scss
@@ -1,6 +1,6 @@
 @import "../theme";
 
-.presentation {
+.history-presentation {
     user-select: none;
     &.text {
         background-color: white;
